src/tests/snapshots/nyx__tests__window_opening__check_target_size@omT-ofT-dwU-dhU-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-maximized true\n    open-floating true\n    default-column-width {  }\n    default-window-height {  }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
